--- a/src/hw1/loops/index.html
+++ b/src/hw1/loops/index.html
@@ -43,7 +43,7 @@
 
 describe("Loops/Task1",function() {
     it("Задание  1: Ввод 91  => А ",function() {
-        assert.equal(window.t1(99),4950);
+        assert.equal(t41(99),4950);
   
 
 });
@@ -54,9 +54,29 @@ describe("Loops/Task1",function() {
 
 describe("Loops/Task2",function() {
     it("Задание 5: Ввод 91  => А ",function() {
-        assert.equal(window.tas(2),"P");
-  
+        assert.equal(taskSost(2),"Prostoe");
+});
+it("Задание 5: Ввод 91  => А ",function() {
+        assert.equal(taskSost(1),"Нейтральный элемент");
+});
+it("Задание 5: Ввод 91  => А ",function() {
+        assert.equal(taskSost(4),"Sostavnoe");
+});
+});
 
+
+
+
+
+describe("Loops/Task2",function() {
+    it("Задание 5: Ввод 91  => А ",function() {
+        assert.equal(factorian(2),2);
+});
+it("Задание 5: Ввод 91  => А ",function() {
+        assert.equal(factorian(5),120);
+});
+it("Задание 5: Ввод 91  => А ",function() {
+        assert.equal(factorian(3),6);
 });
 });
 
