--- a/src/hw1/loops/index.html
+++ b/src/hw1/loops/index.html
@@ -68,7 +68,7 @@ it("Задание 5: Ввод 91  => А ",function() {
 
 
 
-describe("Loops/Task2",function() {
+describe("Loops/Task4",function() {
     it("Задание 5: Ввод 91  => А ",function() {
         assert.equal(factorian(2),2);
 });
@@ -77,6 +77,21 @@ it("Задание 5: Ввод 91  => А ",function() {
 });
 it("Задание 5: Ввод 91  => А ",function() {
         assert.equal(factorian(3),6);
+});
+});
+
+
+
+
+describe("Loops/Task5",function() {
+    it("Задание 5: Ввод 25  => 7 ",function() {
+        assert.equal(SumChZ(25),7);
+});
+it("Задание 5: Ввод 50  => 5 ",function() {
+        assert.equal(SumChZ(50),5);
+});
+it("Задание 5: Ввод 123  => 6 ",function() {
+        assert.equal(SumChZ(123),6);
 });
 });
 
