--- a/src/hw1/loops/index.html
+++ b/src/hw1/loops/index.html
@@ -42,24 +42,24 @@
 
 
 describe("Loops/Task1",function() {
-    it("Задание  1: Ввод 91  => А ",function() {
+    it("Задание  1: Ввод 99  => 4950 ",function() {
         assert.equal(t41(99),4950);
-  
-
+        
 });
+        
 });
 
 
 
 
 describe("Loops/Task2",function() {
-    it("Задание 5: Ввод 91  => А ",function() {
+    it("Задание 5: Ввод 2  => Простое ",function() {
         assert.equal(taskSost(2),"Prostoe");
 });
-it("Задание 5: Ввод 91  => А ",function() {
+it("Задание 5: Ввод 1  => Нейтральный елемент ",function() {
         assert.equal(taskSost(1),"Нейтральный элемент");
 });
-it("Задание 5: Ввод 91  => А ",function() {
+it("Задание 5: Ввод 4  => Составное ",function() {
         assert.equal(taskSost(4),"Sostavnoe");
 });
 });
@@ -69,13 +69,13 @@ it("Задание 5: Ввод 91  => А ",function() {
 
 
 describe("Loops/Task4",function() {
-    it("Задание 5: Ввод 91  => А ",function() {
+    it("Задание 5: Ввод 2 => 2 ",function() {
         assert.equal(factorian(2),2);
 });
-it("Задание 5: Ввод 91  => А ",function() {
+it("Задание 5: Ввод 5  => 120 ",function() {
         assert.equal(factorian(5),120);
 });
-it("Задание 5: Ввод 91  => А ",function() {
+it("Задание 5: Ввод 3  => 6",function() {
         assert.equal(factorian(3),6);
 });
 });
